--- a/08-you try it type scales/begin/css/type.css
+++ b/08-you try it type scales/begin/css/type.css
@@ -1,26 +1,64 @@
 :root {
   --base-size: 1em;
-  --type-scale: 1.125;
-  --h5: calc(var(--base-size) * var(--type-scale));
-  --h4: calc(var(--h5) * var(--type-scale));
-  --h3: calc(var(--h4) * var(--type-scale));
+  --type-scale: 1.33;
+  --h3: calc(var(--base-size) * var(--type-scale));
   --h2: calc(var(--h3) * var(--type-scale));
   --h1: calc(var(--h2) * var(--type-scale));
+  --text-sm: calc(var(--base-size) / var(--type-scale));
+  --header-margin: 0 0 1rem 2rem;
 }
 
-h1 {font-size: var(--h1);}
+h1 {
+  font-size: var(--h1);
+}
 
-h2 {font-size: var(--h2);}
+h2 {
+  font-size: var(--h2);
+}
 
-h3 {font-size: var(--h3);}
+h3 {
+  font-size: var(--h3);
+}
 
-h4 {font-size: var(--h4);}
+h4 {
+  font-size: var(--h4);
+}
 
-h5 {font-size: var(--h5);}
+h5 {
+  font-size: var(--h5);
+}
 
-p {font-size: var(--base-size);}
+p {
+  font-size: var(--base-size);
+}
 
-small, .text_small {font-size: calc(var(--base-size) / var(--type-scale));}
+small,
+.text_small {
+  font-size: var(--text-sm);
+}
+
+.main-menu li {
+  font-size: var(--text-sm);
+}
+.menu-toggle {
+  font-size: var(--h1);
+}
+section > h1 {
+  font-size: var(--text-sm);
+}
+header h1 {
+  font-size: calc(var(--h1) * var(--type-scale));
+}
+header h2 {
+  font-size: var(--text-sm);
+  margin: var(--header-margin);
+}
+#resources h1 {
+  font-size: var(--h2);
+}
+#resources h1 small {
+  font-size: var(--base-size);
+}
 
 @media (min-width: 480px) {
   :root {
@@ -30,5 +68,6 @@ small, .text_small {font-size: calc(var(--base-size) / var(--type-scale));}
 @media (min-width: 768px) {
   :root {
     --type-scale: 1.25;
+    --header-margin: 0 0 1rem 8rem;
   }
 }
